  http://www.mediawiki.org/wiki/Extension:CreativeCoreRdf as appropriate
* (bug 21107) Split error "customcssjsprotected" into separate messages for JS and CSS
* Removed $wgCheckCopyrightUpload from DefaultSettings, since the relevant feature
  was removed in about 1.5.
* LogPageValidTypes, LogPageLogName, LogPageLogHeader and LogPageActionText
  hooks have been removed.

=== New features in 1.19 ===
* BREAKING CHANGE: action=watch / action=unwatch now requires a token.
* (bug 28916) A way to to toggle mw.config legacy globals settings from
  LocalSettings.php has been created by introducing $wgLegacyJavaScriptGlobals.
* (bug 28503) Support for ircs:// URL protocols
* (bug 26033) It is now possible to count all non-redirect pages in content
  namespaces as articles
* Images can now be embedded in an XML dump stream using backupDump.php
  --include-files and can be imported using importDump.php --uploads;
  furthermore, it can import files from the filesystem using --image-base-path
* Three new hooks in Special:Undelete, 'UndeleteForm::showHistory',
  'UndeleteForm::showRevision' and 'UndeleteForm::undelete', so that extensions
  may override the usage of PageArchive class and replace it with their own
  class that extends PageArchive.
* (bug 28915) Implement QUnit test suite for MediaWiki JavaScript.
  Also built-in support for distribution through a TestSwarm instance.
* (bug 29036) For cascade-protected pages, the mw-textarea-cprotected class is
  added to the textarea on the edit form.
* mw.util.wikiScript has been implemented (like wfScript in GlobalFunctions.php)
* (bug 29067) Expose user.tokens (like we do user.options) in ResourceLoader.
* New 'Debug' hook used by wfDebug() and wfDebugLog()
* (bug 27655) Require token for watching/unwatching pages)
* (bug 28904) Update jQuery version from 1.4.4 to 1.6.1 (the latest version)
* (bug 29441) Expose CapitalLinks config in JS to allow modules to properly
  handle titles on case-sensitive wikis.